<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/idToolBarMeioAmbiente"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/seta"
        android:background="@color/dark_purple"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/hollywoodone"
                android:text="Planejamento Urbano"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">


                <androidx.cardview.widget.CardView
                    android:id="@+id/idNormas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/light_purple"
                    android:onClick="expand5"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayNor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgNor"
                            android:layout_width="304dp"
                            android:layout_height="191dp"
                            android:background="@drawable/plan_normas" />

                        <TextView
                            android:id="@+id/idTitNor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titNormas"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextNor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textNormas"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idRegulamentacoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idNormas"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/light_purple"
                    android:onClick="expand6"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgReg"
                            android:layout_width="250dp"
                            android:layout_height="191dp"
                            android:layout_gravity="center"
                            android:background="@drawable/plan_reg" />

                        <TextView
                            android:id="@+id/idTitReg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titRegulamentacoes"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextReg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textRegulamentacoes"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idArvore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idRegulamentacoes"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/light_purple"
                    android:onClick="expand7"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayArv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgArv"
                            android:layout_width="304dp"
                            android:layout_height="191dp"
                            android:background="@drawable/plan_arv" />

                        <TextView
                            android:id="@+id/idTitArv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titArvore"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextArv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textArvore"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idSaneamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idArvore"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/light_purple"
                    android:onClick="expand8"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLaySan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgSan"
                            android:layout_width="304dp"
                            android:layout_height="191dp"
                            android:background="@drawable/plan_san" />

                        <TextView
                            android:id="@+id/idTitSan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titSaneamento"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextSan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textSaneamento"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idEducacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idSaneamento"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/light_purple"
                    android:onClick="expand9"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayEdu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgEdu"
                            android:layout_width="304dp"
                            android:layout_height="191dp"
                            android:background="@drawable/plan_edu" />

                        <TextView
                            android:id="@+id/idTitEdu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titEducacao"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextEdu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textEducacao"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
