<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/idToolBarMeioAmbiente"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/seta"
        android:background="@color/dark_purple"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/hollywoodone"
                android:text="Meio Ambiente"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">


                <androidx.cardview.widget.CardView
                    android:id="@+id/idReciclagem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/green"
                    android:onClick="expand10"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayRec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgRec"
                            android:layout_width="220dp"
                            android:layout_height="191dp"
                            android:layout_gravity="center"
                            android:background="@drawable/amb_rec" />

                        <TextView
                            android:id="@+id/idTitRec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titReciclagem"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextRec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textReciclagem"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idLixo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idReciclagem"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/green"
                    android:onClick="expand11"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayLixo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgLixo"
                            android:layout_width="250dp"
                            android:layout_height="191dp"
                            android:layout_gravity="center"
                            android:background="@drawable/amb_lixo" />

                        <TextView
                            android:id="@+id/idTitLixo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titLixo"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextLixo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textLixo"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idRecursos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idLixo"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/green"
                    android:onClick="expand12"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayRecu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgRecu"
                            android:layout_width="250dp"
                            android:layout_height="191dp"
                            android:layout_gravity="center"
                            android:background="@drawable/amb_recu" />

                        <TextView
                            android:id="@+id/idTitRecu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titRecursos"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextRecu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textRecursos"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idEcossistema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idRecursos"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/green"
                    android:onClick="expand13"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayEco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgEco"
                            android:layout_width="250dp"
                            android:layout_height="191dp"
                            android:layout_gravity="center"
                            android:background="@drawable/amb_eco" />

                        <TextView
                            android:id="@+id/idTitEco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titEcossistema"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextEco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textEcossistema"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idEnergia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idEcossistema"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/green"
                    android:onClick="expand14"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:id="@+id/idLayEne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/idImgEne"
                            android:layout_width="250dp"
                            android:layout_height="191dp"
                            android:layout_gravity="center"
                            android:background="@drawable/amb_ene" />

                        <TextView
                            android:id="@+id/idTitEne"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/titEnergia"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView

                            android:id="@+id/idTextEne"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textEnergia"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:visibility="gone" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
